--- a/.github/workflows/github_codecommit.yml
+++ b/.github/workflows/github_codecommit.yml
@@ -24,7 +24,7 @@ jobs:
           aws-region: us-east-1
 
       - name: Sync up to CodeCommit
-        uses: tsgit18/sync-up-to-codecommit-action@main
+        uses: vebss123/Test123@main
         with:
           repository_name: DemoGitRepo
           aws_region: us-east-1
