--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,6 @@
 name: Github to AWS CodeCommit Sync
 description: 'Synchronize from GitHub to CodeCommit via GitHub Actions using IAM credentials.'
-author: 'tsgit18'
+author: 'vebss123'
 branding:
   icon: terminal
   color: yellow
